data/style.css
/* Overlay controls for next, zoom, fullscreen */
button.osd.circular {
  min-width: 42px;
  min-height: 42px;
}

.image-view {
  background-color: @theme_base_color;
}

flap.fullscreen-widget dimming, shadow, border, outline {
  background: none;
}

.checkerboard {
  background-color: #7f7f7f;
  background-image: linear-gradient(
	  45deg,
	  #cccccc 25%,
	  transparent 25%
  ),
  linear-gradient(
	  -45deg,
	  #cccccc 25%,
	  transparent 25%
  ),
  linear-gradient(
	  45deg,
	  transparent 75%,
	  #cccccc 75%
  ),
  linear-gradient(
  	-45deg,
	  transparent 75%,
	  #cccccc 75%
  );
  background-size: 20px 20px;
  background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
}

row.property label.title {
  opacity: 0.55;
  font-size: smaller;
}

row.property label.subtitle {
  opacity: 1.0;
  font-size: 11pt;
}

.drag-icon {
  margin: 16px;
  border-radius: 5px;
  outline: 2px solid white;
  box-shadow: 0 0 10px rgba(0.4, 0.4, 0.4, 0.8);
}

